# supervised

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  scrape.py  supervised.py
.devcontainer/: devcontainer.json
supervised/: a.py  backend.py  cache.py  data.py  embed.py  main.py  rag.py  run_scraping.py  scrape.py  summarize.py  utils.py
supervised/tests/: scrape_tests.py
